<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rubendario.islanzapp.MapsActivity" >
    //Boton de Moderador
    <item android:id="@+id/action_moderador"
        android:icon="@drawable/contactar_moderador"
        android:title="@string/action_moderador"
        app:showAsAction="always"
        android:visible="true"/>


    //Boton de Bitacora
    <item android:id="@+id/action_Bitacora"
        android:icon="@drawable/bitacora"
        android:title="@string/action_Bitacora"
        app:showAsAction="always"
        android:visible="true"/>
    // Boton de Buscar
    <item android:id="@+id/search_button"
        android:icon="@drawable/buscar"
        app:showAsAction="always"
        android:title="@string/action_search"
        android:visible="true"/>
    // Boton de configuracion
    <item android:id="@+id/action_settings"
          android:icon="@drawable/configuracion"
          android:title="@string/action_settings"
          app:showAsAction="always"
          android:visible="true">
        <menu>
            <item
                android:id="@+id/action_volume"
                android:title="@string/action_volume_up"
                android:icon="@drawable/sonido_activo"/>

            <item
                android:id="@+id/action_mute"
                android:title="@string/action_mute"
                android:icon="@drawable/sonido_inactivo"/>

            <item
                android:id="@+id/action_tutorial"
                android:title="@string/Action_turorial"
                android:icon="@drawable/tutorial"/>
            <item
                android:id="@+id/action_language"
                android:title="@string/Action_language"
                android:icon="@drawable/cambio_lenguaje"/>
        </menu>
    </item>


</menu>